--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
@@ -81,11 +81,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Authentications\PlayerLoginController.cs" />
     <Compile Include="Assets\Scripts\Authentications\PlayerLogoutController.cs" />
     <Compile Include="Assets\Scripts\Communications\PhotonServiceController.cs" />
     <Compile Include="Assets\Scripts\Entities\EntityController.cs" />
-    <Compile Include="Assets\Scripts\Systems\DebugController.cs" />
     <Compile Include="Assets\Scripts\Systems\ErrorInformController.cs" />
     <Compile Include="Assets\Scripts\Systems\EternalObject.cs" />
     <Compile Include="Assets\Scripts\Systems\SceneController.cs" />
@@ -100,8 +98,8 @@
     <Compile Include="Assets\Scripts\Uis\PlayerAnswerScene\SoulPanel.cs" />
     <Compile Include="Assets\Scripts\Uis\PlayerAnswerScene\SoulsPanelController.cs" />
     <Compile Include="Assets\Scripts\Uis\PlayerLoginScene\InputNavigationController.cs" />
+    <Compile Include="Assets\Scripts\Uis\PlayerLoginScene\PlayerLoginController.cs" />
     <Compile Include="Assets\Scripts\Uis\PlayerLoginScene\PlayerLoginUI.cs" />
-    <Compile Include="Assets\Scripts\Uis\PlayerScene\PlayerController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
