--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.Plugins.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.Plugins.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>GamePlugins:3</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>5.4.0f3</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -94,6 +96,7 @@
     <Compile Include="Assets\Plugins\Library.General\ClientPlayerCommunicationInterface.cs" />
     <Compile Include="Assets\Plugins\Library.General\ClientWorldCommunicationInterface.cs" />
     <Compile Include="Assets\Plugins\Library.General\Horizon.cs" />
+    <Compile Include="Assets\Plugins\Library.General\Seat.cs" />
     <Compile Include="Assets\Standard Assets\Image Effects (Pro Only)\BlurEffect.cs" />
     <Compile Include="Assets\Standard Assets\Image Effects (Pro Only)\ColorCorrectionEffect.cs" />
     <Compile Include="Assets\Standard Assets\Image Effects (Pro Only)\ContrastStretchEffect.cs" />
