--- a/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
+++ b/DoorofSoul.Client/DoorofSoul.Client.CSharp.csproj
@@ -67,14 +67,14 @@
     <Reference Include="DoorofSoul.Protocol.Communication">
       <HintPath>Assets\Plugins\DLL\DoorofSoul.Protocol.Communication.dll</HintPath>
     </Reference>
+    <Reference Include="DoorofSoul.Protocol">
+      <HintPath>Assets\Plugins\DLL\DoorofSoul.Protocol.dll</HintPath>
+    </Reference>
     <Reference Include="DoorofSoul.Protocol.Language">
       <HintPath>Assets\Plugins\DLL\DoorofSoul.Protocol.Language.dll</HintPath>
     </Reference>
     <Reference Include="Photon3Unity3D">
       <HintPath>Assets\Plugins\DLL\Photon3Unity3D.dll</HintPath>
-    </Reference>
-    <Reference Include="DoorofSoul.Protocol">
-      <HintPath>Assets\Plugins\DLL\DoorofSoul.Protocol.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-UnityScript-firstpass">
       <HintPath>Library\ScriptAssemblies\Assembly-UnityScript-firstpass.dll</HintPath>
@@ -111,7 +111,8 @@
     <Compile Include="Assets\Scripts\Uis\PlayerLoginScene\InputNavigationController.cs" />
     <Compile Include="Assets\Scripts\Uis\PlayerLoginScene\PlayerLoginController.cs" />
     <Compile Include="Assets\Scripts\Uis\PlayerLoginScene\PlayerLoginUI.cs" />
-    <Compile Include="Assets\Scripts\Uis\PlayerPanel.cs" />
+    <Compile Include="Assets\Scripts\Uis\PlayerPanel\MessageContentPanel.cs" />
+    <Compile Include="Assets\Scripts\Uis\PlayerPanel\PlayerPanel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\Image Effects (Pro Only)\_Sources\Shaders\BlendModesOverlay.shader" />
