--- a/DoorofSoul.Protocol/DoorofSoul.Protocol.csproj
+++ b/DoorofSoul.Protocol/DoorofSoul.Protocol.csproj
@@ -42,6 +42,8 @@
     <Compile Include="MessageTargetType.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializationClassTypeCode.cs" />
+    <Compile Include="SoulKernelType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
