--- a/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
+++ b/DoorofSoul.Library.General/DoorofSoul.Library.General.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Operations\Handlers\Scene\FetchDataHandler.cs" />
     <Compile Include="Operations\Handlers\Scene\FetchData\FetchEntitiesInformationHandler.cs" />
     <Compile Include="Operations\Handlers\Soul\FetchDataHandler.cs" />
+    <Compile Include="Operations\Handlers\Soul\FetchData\FetchSkillInfosHandler.cs" />
     <Compile Include="Operations\Handlers\World\FetchDataHandler.cs" />
     <Compile Include="Operations\Handlers\World\FetchDataResolver.cs" />
     <Compile Include="Operations\Handlers\Player\FetchData\FetchSceneHandler.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Responses\Handlers\SoulResponseHandler.cs" />
     <Compile Include="Responses\Handlers\Soul\FetchDataResponseHandler.cs" />
     <Compile Include="Responses\Handlers\Soul\FetchDataResponseResolver.cs" />
+    <Compile Include="Responses\Handlers\Soul\FetchData\FetchSkillInfosResponseHandler.cs" />
     <Compile Include="Responses\Handlers\WorldResponseHandler.cs" />
     <Compile Include="Responses\Handlers\World\FetchDataResponseHandler.cs" />
     <Compile Include="Responses\Handlers\World\FetchDataResponseResolver.cs" />
@@ -252,10 +254,8 @@
     <Folder Include="Events\Handlers\Soul\InformData\" />
     <Folder Include="Events\Handlers\World\InformData\" />
     <Folder Include="Operations\Handlers\Entity\FetchData\" />
-    <Folder Include="Operations\Handlers\Soul\FetchData\" />
     <Folder Include="Operations\Handlers\World\FetchData\" />
     <Folder Include="Responses\Handlers\Entity\FetchData\" />
-    <Folder Include="Responses\Handlers\Soul\FetchData\" />
     <Folder Include="Responses\Handlers\World\FetchData\" />
   </ItemGroup>
   <ItemGroup>
