--- a/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
+++ b/DoorofSoul.Protocol.Communication/DoorofSoul.Protocol.Communication.csproj
@@ -77,6 +77,7 @@
     <Compile Include="FetchDataResponseParameters\Player\FetchSceneResponseParameterCode.cs" />
     <Compile Include="FetchDataResponseParameters\Player\FetchSystemVersionResponseParameterCode.cs" />
     <Compile Include="FetchDataResponseParameters\Scene\FetchEntitiesResponseParameterCode.cs" />
+    <Compile Include="FetchDataResponseParameters\Soul\FetchSkillInfosResponseParameterCode.cs" />
     <Compile Include="InformDataCodes\AnswerInformDataCode.cs" />
     <Compile Include="InformDataCodes\ContainerInformDataCode.cs" />
     <Compile Include="InformDataCodes\EntityInformDataCode.cs" />
@@ -138,7 +139,6 @@
     <Folder Include="FetchDataParameters\Soul\" />
     <Folder Include="FetchDataParameters\World\" />
     <Folder Include="FetchDataResponseParameters\Entity\" />
-    <Folder Include="FetchDataResponseParameters\Soul\" />
     <Folder Include="FetchDataResponseParameters\World\" />
     <Folder Include="InformDataParameters\Answer\" />
     <Folder Include="InformDataParameters\Entity\" />
